--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ Theme URI: https://material.rpi-virtuell.de
 Template: twentyseventeen
 Author: the WordPress team
 Author URI: https://staude.net
-Description:
-Version: 1.0.1483523464
+Description: Theme für den rpi-materialpool
+GitHub Theme URI: https://github.com/rpi-virtuell/rw-materialpool-theme
+GitHub Branch:  master
+Version: 1.1.0
 
 */
 
