--- a/style.css
+++ b/style.css
@@ -919,3 +919,12 @@ div.accordion h2{
     padding: 0.5em 0.5em;
 }
 
+/*footer*/
+
+footer, footer a, footer h2.widget-title{
+
+    background-color: #1B638A;
+    color: #ffffff;
+    text-decoration:none;
+
+}
