fixed grid layout themenseite + startseite

--- a/style.css
+++ b/style.css
@@ -112,11 +112,15 @@ span.thema-title a{
 
 /* front-page  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 .home .material-results{
-    margin-bottom:50px;
+
     padding: 0;
+/*
+    margin-bottom:50px;
     -moz-column-gap: 1.5em;
     -webkit-column-gap: 1.5em;
     column-gap: 1.5em;
+*/
+
     text-align: center;
     max-height: 100%;
     overflow: hidden;
@@ -144,10 +148,18 @@ span.thema-title a{
 .themenseite-gruppe .material-results{
     margin-bottom:50px;
     padding: 0;
+    /*
     -moz-column-gap: 1.5em;
     -webkit-column-gap: 1.5em;
     column-gap: 1.5em;
+    */
     font-size: .85em;
+}
+
+.home .facetwp-template, .single-themenseite .material-results{
+    display: grid;
+    grid-template-rows: auto;
+    grid-gap: 10px;
 
 }
 
@@ -157,29 +169,23 @@ span.thema-title a{
         float: none;
     }
 }
-@media only screen and (min-width: 600px) {
-    .home .material-results,
-    .themenseite-gruppe .material-results {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
+@media only screen and (min-width: 380px) {
+    .home .facetwp-template, .single-themenseite .material-results {
+        grid-template-columns: repeat(1, 1fr);
+
     }
 
 }
-@media only screen and (min-width: 900px) {
-    .home .material-results {
-        -moz-column-count: 2;
-        -webkit-column-count: 2;
-        column-count: 2;
+@media only screen and (min-width: 600px) {
+    .home .facetwp-template, .single-themenseite .material-results {
+        grid-template-columns: repeat(2, 1fr);
+
     }
 }
 
 @media only screen and (min-width: 1200px) {
-    .home .material-results,
-    .themenseite-gruppe .material-results {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
+    .home .facetwp-template, .single-themenseite .material-results {
+       grid-template-columns: repeat(3, 1fr);
     }
 }
 
