--- a/style.css
+++ b/style.css
@@ -986,3 +986,8 @@ footer, footer a, footer h2.widget-title{
     padding: 5px 0 20px 5px;
     border-radius: 3px;
 }
+
+ul, ol {
+    padding-left: 20px;
+}
+
