--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ div.organisation-left .organisation-image{
     width:103%;
     background-size: contain;
     background-position: left center;
-    margin-bottom: 20px;
+
 }
 
 div.organisation-left .image-alt, .autor-left .image-alt{
@@ -996,4 +996,9 @@ footer, footer a, footer h2.widget-title{
 
 .material-detail-description ul, ol {
 	padding-left: 20px;	
+}
+
+.organisation-top-orga {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
