material top Abstand

--- a/style.css
+++ b/style.css
@@ -695,6 +695,11 @@ div.material-suche .facetwp-btn:hover{
     display: inline;
 }
 
+.material-meta {
+    margin-top: 30px;
+}
+
+
 
 /* facetts */
 
