--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Author URI: https://staude.net
 Description: Theme für den rpi-materialpool
 GitHub Theme URI: https://github.com/rpi-virtuell/rw-materialpool-theme
 GitHub Branch:  master
-Version: 1.1.5
+Version: 1.1.6
 
 */
 
@@ -364,6 +364,7 @@ div.material-column h1,
 .material-detail-content {
     flex: 1;
     padding: 0 20px;
+    overflow:hidden;
 }
 .material-detail-content-viewer{
     flex: 1;
