Themenseiten Accordion Icon

--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ Version: 1.1.8
     }
 }
 
+.ui-accordion .ui-accordion-header .ui-icon {
+    position: absolute;
+    left: .5em;
+    top: 50%;
+    margin-top: -8px;
+}
+
 .single-post:not(.has-sidebar) #primary, .page.page-one-column:not(.twentyseventeen-front-page) #primary, .archive.page-one-column:not(.has-sidebar) .page-header, .archive.page-one-column:not(.has-sidebar) #primary {
     margin-left: auto;
     margin-right: auto;
